
0.32    2013-07-12
        * Fixed typos

0.33    2013-07-12
        + [EXPERIMENTAL] Added a new method "use_smart_saving".

0.34	2013-08-21
        + Added tracing queries
        + Added some tests
        * Minor fixes

0.35	2013-08-26
        + Added new "update-on-destroy" feature.

0.40    2013-10-23
        + Added  methods: limit, offset
        + Method "find" now works with no arguments
          (returns all records from db)
        - Deleted method "get_all"
        * Bugfixes
        * Method find() with primary key goes to be named get()
        * Tests fixes
        * Improved documentation

0.41	2013-10-24
	    * Code cleanup
	    * Bux fixes
	    * Typo fixes

0.50	2013-11-02
        + Added ability to change relation instance into object
        + Added some tests
        * Fixed "save" method
        * Many fixes and huge code improvements
        * Typo fixes

0.51    2013-11-11
        + Added method's "last" & "first"
        + Added new class ActiveRecord::Simple::Tutorial with pod-documentation
        + Implemented schema-loader script called "mars"
        + Added method "count"
        + Added method "exists"
        + Added possibility to creating read-only objects: fetch({ read_only => 1 })
        + Added new syntax to method "fetch"
        + Added possibility to select only specific fields ("only")
        * Improved tests
        * Improved documentation
        * Fixed bugs

0.52    2013-11-26
        * Fixed the `fetch` behavior
        * Fixed tests

0.53    2014-05-12
        + Added method "increment" (thnx @lifeofguenter)
        + Added method "decrement" (thnx @lifeofguenter)

0.60.0  2014-05-19
        + Added new relationships aliases
        + Added generic relations
        * Improved increment/decrement methods
        * Migrated to semver

0.61.0  2014-09-17
        + Added schema builder (with method "fields")
        + Added fields validation (only when "fields" method is used)
        + Added class method "as_sql"