@@ -14,6 +14,7 @@ WriteMakefile1(
         'Module::Load' => 0,
         'DBI' => 0,
         'Storable' => 0,
+        'SQL::Translator' => 0,
     },
     MIN_PERL_VERSION => '5.010',
     META_MERGE => {
