@@ -8,7 +8,16 @@ use lib '../../lib';
 use base 'ActiveRecord::Simple';
 
 __PACKAGE__->table_name('artist_cd');
-__PACKAGE__->columns(['artist_id', 'cd_id']);
+__PACKAGE__->fields(
+    artist_id => {
+        data_type   => 'int',
+        is_nullable => 0,
+    },
+    cd_id => {
+        data_type   => 'int',
+        is_nullable => 0,
+    },
+);
 
 __PACKAGE__->belongs_to(artist => 'Artist', 'artist_id');
 __PACKAGE__->belongs_to(cd => 'CD', 'cd_id');
