@@ -83,3 +83,4 @@ Revision history for Perl module ActiveRecord::Simple
         + Added schema builder (with method "fields")
         + Added fields validation (only when "fields" method is used)
         + Added class method "as_sql"
+        + Added PACKAGE method "index"
